Commit from TeleportHQ

--- a/index.css
+++ b/index.css
@@ -62,7 +62,7 @@
   }
 }
 
-.features-wrapper-blvl {
+.features-wrapper-vh3n {
   display: contents;
 }
  
@@ -126,7 +126,7 @@
   }
 }
 
-.features-wrapper-1px9 {
+.features-wrapper-max6 {
   display: contents;
 }
  
@@ -249,7 +249,7 @@
   }
 }
 
-.practice-wrapper-f3ec {
+.practice-wrapper-6cbu {
   display: contents;
 }
  
@@ -308,7 +308,7 @@
   }
 }
 
-.practice-wrapper-ws48 {
+.practice-wrapper-f4kj {
   display: contents;
 }
  
@@ -367,7 +367,7 @@
   }
 }
 
-.practice-wrapper-71x4 {
+.practice-wrapper-28cu {
   display: contents;
 }
  
@@ -426,7 +426,7 @@
   }
 }
 
-.practice-wrapper-8tfl {
+.practice-wrapper-ht4x {
   display: contents;
 }
  
@@ -485,7 +485,7 @@
   }
 }
 
-.practice-wrapper-do05 {
+.practice-wrapper-lrth {
   display: contents;
 }
  
@@ -603,7 +603,7 @@
   }
 }
 
-.doctor-wrapper-3h0c {
+.doctor-wrapper-q4j4 {
   display: contents;
 }
  
@@ -662,7 +662,7 @@
   }
 }
 
-.doctor-wrapper-aphn {
+.doctor-wrapper-iovz {
   display: contents;
 }
  
@@ -721,7 +721,7 @@
   }
 }
 
-.doctor-wrapper-kzck {
+.doctor-wrapper-dcrh {
   display: contents;
 }
  
